--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ lsh110600:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    오늘도 
+    不狂不及
 
   # This photo will be used in the about section
   picture:
